# ResultWizard

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  Pipfile  README.md  TODO.md  pyproject.toml  python_to_latex.py  results.tex
.github/actions/changed_files/: action.yml
.github/workflows/: docs-verify.yml  docs.yml  linter.yml  release.yml  tests.yml
archive/: globals_to_latex.py  helpers.py  python_to_latex.py  var_to_latex.py
docs/: 404.html  Gemfile  README.md  _config.yml  index.md
docs/_api/: config.md  export.md  res.md
docs/_includes/: nav_footer_custom.html  title.html
docs/_sass/color_schemes/: resultwizard-colors.scss
docs/_sass/custom/: setup.scss
docs/_tips/: jupyter.md  precision.md  siunitx.md
docs/pages/: about.md  quick-start.md  quickstart.md  trouble.md
src/: README.md  cache.py  config.py  globals_to_latex.py  helpers.py  python_to_latex.py  result.py  table_to_latex.py  uncertainty.py  value.py  var_to_latex.py
src/api/: config.py  console_stringifier.py  export.py  latexer.py  parsers.py  printable_result.py  printable_uncertainty.py  res.py  stringifier.py
src/api/tables/: column.py  table.py  table_res.py
src/application/: cache.py  config.py  error_messages.py  helpers.py  latex_better_siunitx_stringifier.py  latex_commandifier.py  latex_stringifier.py  latexer.py  latexer_ifelse.py  master_stringifier.py  rounder.py  stringifier.py
src/application/tables/: latexer.py  table_latex_commandifier.py
src/domain/: result.py  uncertainty.py  value.py
src/domain/tables/: column.py  table.py
src/result/: __init__.py  result.py
src/resultwizard/: __init__.py
src/valuewizard/: __init__.py
tests/: number_word_test.py  parsers_test.py  playground.py  rounder_test.py
tests/integration/: whole_workflow_test.py
tests/integration/fixtures/: eiffeltower.tex
